[tool.poetry]
name = "async-django"
version = "0.1.0"
description = "Asynchronous Django"
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "async_django"}]
homepage = "https://github.com/youzarsiph/django-short-links/"
repository = "https://github.com/youzarsiph/django-short-links/"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
